# agora

./: .env.example  .gitignore  E2E_REPORT.md  Procfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
__tests__/api/: disputes.test.ts
app/: globals.css  layout.tsx  page.tsx  providers.tsx
components/: ConnectWalletNav.tsx  FaucetButton.tsx  StakeForm.tsx
components/codex/: AnimatedNumber.tsx  BackgroundAtmosphere.tsx  BondStakeGauge.tsx  CalibrationChart.tsx  ConstellationLines.tsx  CovenantQuadrant.tsx  CrossChainStakePanel.tsx  DisputeForm.tsx  DisputesList.tsx  DossierBadge.tsx  Hero.tsx  (+11 more)
contracts/: foundry.toml
indexer/: worker.ts
lib/: abis.ts  circle.ts  db.ts  env.ts  fonts.ts  manifest.ts  openai-validator.ts  supabase.ts  traction.ts  types.ts  viem.ts  wagmi.ts
prisma/: schema.prisma
pythias/apollo/: manifest.json  pyproject.toml
pythias/apollo/apollo/: __init__.py  __main__.py  pythia.py
pythias/cassandra/: __main__.py  manifest.json  pyproject.toml
pythias/cassandra/cassandra/: __init__.py  pythia.py
pythias/hermes/: __main__.py  manifest.json  pyproject.toml
pythias/hermes/hermes/: __init__.py  pythia.py
pythias/shared/: pyproject.toml
pythias/shared/pythia_shared/: __init__.py  base_pythia.py  forecast_signer.py  irys_pin.py  manifest.py  polymarket_client.py  registry_client.py  tradingagents_wrapper.py
pythias/shared/tests/: test_brain.py
scripts/: cctp-relayer.ts  demo.sh  deploy-amm.ts  deploy-cctp.ts  deploy-multiquote-factory.ts  deploy-railway.sh  deploy-vercel.sh  deploy.sh  e2e-onchain.sh  e2e-sadpath.sh  fund-address.ts  fund-daemons.ts  generate-entity-secret.mjs  generate-irys-wallet.mjs  invite.md  irys-upload.mjs  register-all.ts  registration-state.json  test-circle-emit.py  traction.sh
supabase/: config.toml
(+49 files in other folders)
