[project]
name = "apollo-pythia"
version = "0.1.0"
description = "Apollo - macro forecaster Pythia"
requires-python = ">=3.11"
dependencies = [
    "pythia-shared",
    "feedparser>=6.0",
    "fredapi>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apollo"]

[tool.uv.sources]
pythia-shared = { path = "../shared", editable = true }
