[project]
name = "cassandra-pythia"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pythia-shared", "requests>=2.32"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["cassandra"]
[tool.uv.sources]
pythia-shared = { path = "../shared", editable = true }
