[project]
name = "hermes-pythia"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pythia-shared", "feedparser>=6.0"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["hermes"]
[tool.uv.sources]
pythia-shared = { path = "../shared", editable = true }
