[project]
name = "pythia-shared"
version = "0.1.0"
description = "Shared library for Agora Pythia services"
requires-python = ">=3.11"
dependencies = [
    "web3>=7.6",
    "eth-account>=0.13",
    "requests>=2.32",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "openai>=1.50",
    "circle-developer-controlled-wallets>=9.3",
    # TradingAgents pulled in by per-Pythia services to avoid forcing it here
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pythia_shared"]
